mdapipkg/unpackaged/objects/CTI__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Class__c</fullName>
        <description>Passenger&apos;s Travel Class</description>
        <label>Accepted Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Unidentified</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accepted_Seat_Number__c</fullName>
        <description>Display Passenger&apos;s Seat (post check-in) from Accepted Seat Number in related case. Formula will default Unidentified value for blank Accepted Seat.</description>
        <formula>IF(ISBLANK(Caseid__r.Accepted_Seat_Number__c) || Caseid__r.Accepted_Seat_Number__c == &quot;NA&quot;,&quot;Unidentified&quot;,Caseid__r.Accepted_Seat_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Seat Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Seat__c</fullName>
        <description>Display Passenger&apos;s Seat (post check-in) from user input. Formula will default Unidentified value for blank Accepted Seat.</description>
        <formula>IF( ISBLANK(Accepted_Seat_txt__c) || Accepted_Seat_txt__c == &quot;NA&quot;,&quot;Unidentified&quot; , Accepted_Seat_txt__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Seat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Seat_txt__c</fullName>
        <description>Passenger&apos;s Seat Number (post check-in) from user input.</description>
        <label>Accepted Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Reg__c</fullName>
        <description>Displays the Aircraft Registration value that the Case is related to (via Aircraft)</description>
        <formula>IF(NOT(ISBLANK(Flightid__r.AircraftId__r.Name)),SUBSTITUTE( Flightid__r.AircraftId__r.Name, &quot;-&quot;, &quot;&quot;),&quot;Unidentified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft_Reg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <description>Displays the Aircraft Type that the Case is related to (via Aircraft).</description>
        <formula>IF(NOT(ISBLANK(Flightid__r.Aircraft_Type__c)),Flightid__r.Aircraft_Type__c,&quot;Unidentified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Flight area value which from Sector</description>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Class__c</fullName>
        <description>Passenger&apos;s Booking Seat (from booking before chenk-in) from Accepted Seat Number in case.</description>
        <label>Booking Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Seat__c</fullName>
        <description>Passenger&apos;s Booking Seat (from booking before chenk-in) from Booking Seat Number in related case.</description>
        <formula>IF(ISBLANK(Caseid__r.Passengerid__r.Booking_Seat__c),&quot;Unidentified&quot;,Caseid__r.Passengerid__r.Booking_Seat__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Seat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Represent flight as &apos;Domestic&apos; or &apos;International&apos; by Flight Number.

If flight number is less than 300 or equal 1000 and over, it will be &apos;Domestic&apos; flight.
else it could be &apos;International&apos;.</description>
        <formula>IF( Flight_Number_F__c == &quot;TGXXX&quot;,&quot;Unidentified&quot;,
IF(VALUE(SUBSTITUTE( Flight_Number_F__c , &quot;TG&quot;, &quot;&quot;)) &lt; 300 ||  
   VALUE(SUBSTITUTE( Flight_Number_F__c , &quot;TG&quot;, &quot;&quot;)) &gt;= 1000,
&quot;Domestic&quot;,&quot;International&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Category__c</fullName>
        <description>---Does not be used---</description>
        <label>Category (del)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arrival/Transit/Connections</fullName>
                </value>
                <value>
                    <fullName>Authorities and Airport Facilities</fullName>
                </value>
                <value>
                    <fullName>Boarding and Departure Area</fullName>
                </value>
                <value>
                    <fullName>Check-in and Service before immigration</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Customer Retention</fullName>
                </value>
                <value>
                    <fullName>General Comments on TG Services</fullName>
                </value>
                <value>
                    <fullName>Handling of flight Irregularities</fullName>
                </value>
                <value>
                    <fullName>In-flight Service</fullName>
                </value>
                <value>
                    <fullName>Lounges</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Onboard Catering</fullName>
                </value>
                <value>
                    <fullName>Reservation and Ticketing Service</fullName>
                </value>
                <value>
                    <fullName>Royal Orchid Holiday Program</fullName>
                </value>
                <value>
                    <fullName>Royal Orchid Plus Program</fullName>
                </value>
                <value>
                    <fullName>Schedule Deviation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTI_Date_F__c</fullName>
        <description>CTI create date in format dd-Mmm-yy</description>
        <formula>IF(!ISNULL(CreatedDate), 
IF(LEN(TEXT(DAY(DATEVALUE(CreatedDate)))) &gt; 1,&quot;&quot;,&quot;0&quot;) &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp;CASE(MONTH(DATEVALUE(CreatedDate)), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTI Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Date_T__c</fullName>
        <description>CTI create date in format dd/mm/yyyy</description>
        <formula>TEXT(Day(CTI_Date__c)) &amp; &quot;/&quot; &amp; TEXT(Month(CTI_Date__c)) &amp; &quot;/&quot; &amp; TEXT(Year(CTI_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTI Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Date__c</fullName>
        <description>CTI create date in format dd</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTI_Details__c</fullName>
        <description>CTI details</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTI_Station__c</fullName>
        <description>Station that case occured. This field value is from user input.</description>
        <label>Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Case Number with creator department and station of related case.</description>
        <formula>Caseid__r.Case_Number_Custom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caseid__c</fullName>
        <description>Case which CTI is related.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CTIs</relationshipLabel>
        <relationshipName>CTIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <description>To return 1 value to be used in report.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_R__c</fullName>
        <description>CTI Category with number.</description>
        <formula>CASE(Category__c ,
&quot;Contact Center&quot;, &quot;01. Contact Center&quot;,
&quot;Reservation and Ticketing Service&quot;, &quot;02. Reservation and Ticketing Service&quot;,
&quot;Check-in and Service before immigration&quot;, &quot;03. Check-in and Service before immigration&quot;,
&quot;Lounges&quot;, &quot;04. Lounges&quot;,
&quot;Boarding and Departure Area&quot;, &quot;05. Boarding and Departure Area&quot;,
&quot;In-flight Service&quot;, &quot;06. In-flight Service&quot;,
&quot;Onboard Catering&quot;, &quot;07. Onboard Catering&quot;,
&quot;Arrival/Transit/Connections&quot;, &quot;08. Arrival/Transit/Connections&quot;,
&quot;Royal Orchid Plus Program&quot;, &quot;09. Royal Orchid Plus Program&quot;,
&quot;Customer Retention&quot;, &quot;10. Customer Retention&quot;,
&quot;General Comments on TG Services&quot;, &quot;11. General Comments on TG Services&quot;,
&quot;Marketing&quot;, &quot;12. Marketing&quot;,
&quot;Schedule Deviation&quot;, &quot;13. Schedule Deviation&quot;,
&quot;Handling of flight Irregularities&quot;, &quot;14. Handling of flight Irregularities&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <description>Concatinate CTI Category with CTI Type</description>
        <formula>TEXT(Category__c) &amp; &apos; &gt; &apos; &amp;  TEXT(Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category &gt; Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category represent touchpoit thai case occur.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Reservation and Ticketing Service</fullName>
                </value>
                <value>
                    <fullName>Check-in and Service before immigration</fullName>
                </value>
                <value>
                    <fullName>Lounges</fullName>
                </value>
                <value>
                    <fullName>Boarding and Departure Area</fullName>
                </value>
                <value>
                    <fullName>In-flight Service</fullName>
                </value>
                <value>
                    <fullName>Onboard Catering</fullName>
                </value>
                <value>
                    <fullName>Arrival/Transit/Connections</fullName>
                </value>
                <value>
                    <fullName>Royal Orchid Plus Program</fullName>
                </value>
                <value>
                    <fullName>Customer Retention</fullName>
                </value>
                <value>
                    <fullName>General Comments on TG Services</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Schedule Deviation</fullName>
                </value>
                <value>
                    <fullName>Handling of flight Irregularities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>To convert CTI Accepted Class from F, C, U, Y to be fullname</description>
        <formula>CASE( Accepted_Class__c , &apos;F&apos;, &apos;Royal First Class&apos;, &apos;C&apos;, &apos;Royal Silk Class&apos;,&apos;U&apos;,&apos;Premium Economy Class&apos;,&apos;Y&apos;,&apos;Economy Class&apos;,&apos;Unidentified&apos;)</formula>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commendation__c</fullName>
        <description>Return 1 to count CTI ,which Type of Issue is equal to &apos;Commendation&apos;, for report</description>
        <formula>If( ISPICKVAL(Type_of_Issue__c , &apos;Commendation&apos;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <description>Return 1 to count CTI ,which Type of Issue is equal to &apos;Complaint&apos;, for report</description>
        <formula>If(  ISPICKVAL(Type_of_Issue__c  , &apos;Complaint&apos;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_to__c</fullName>
        <defaultValue>&quot;1:&quot;</defaultValue>
        <description>Using in Report</description>
        <label>Complaint :</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <description>Passenger&apos;s Continent which are map from Nationality</description>
        <formula>IF(ISBLANK( Continent_txt__c ),
IF(ISBLANK(TEXT(Nationality_txt__c) ) || TEXT(Nationality_txt__c) == &quot;Unidentified&quot;,&quot;Unidentified&quot;,
IF(ISBLANK(Caseid__r.Passengerid__r.Continent__c),&quot;Unidentified&quot;,Caseid__r.Passengerid__r.Continent__c)),
Continent_txt__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent_txt__c</fullName>
        <label>Continent txt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continential__c</fullName>
        <formula>Null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FFP_No__c</fullName>
        <description>Membership Number of Passenger who relate to CTI&apos;s case</description>
        <formula>Caseid__r.Passengerid__r.FFP_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FFP No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFP_Tier__c</fullName>
        <description>Membership FFP Tier (e.g. PLAT) of Passenger who relate to CTI&apos;s case</description>
        <formula>Caseid__r.Passengerid__r.FFP_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FFP Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Passenger&apos;s firstname whose relate to CTI&apos;s case</description>
        <formula>Caseid__r.Passengerid__r.First_Name__c</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightDateF__c</fullName>
        <description>Flight Date LT in format dd-MMM-yy</description>
        <formula>IF(!ISBLANK( Flightid__r.Flight_Date_LT__c ), 
TEXT(DAY(DATEVALUE(Flightid__r.Flight_Date_LT__c))) &amp; &quot;-&quot; &amp;CASE(MONTH(DATEVALUE(Flightid__r.Flight_Date_LT__c)), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp;  RIGHT(TEXT(YEAR(DATEVALUE(Flightid__r.Flight_Date_LT__c))),2),&quot;Unidentified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightDate__c</fullName>
        <description>Flight Date LT in format mm/dd/yyyy</description>
        <formula>IF(!ISBLANK( Flightid__r.Flight_Date_LT__c),

IF(LEN(TEXT(MONTH( DATEVALUE(Flightid__r.Flight_Date_LT__c)))) &gt; 1, &quot;&quot;, &quot;0&quot;) &amp;
TEXT(MONTH( DATEVALUE(Flightid__r.Flight_Date_LT__c))) &amp; &quot;/&quot; &amp; 

IF(LEN(TEXT(DAY( DATEVALUE(Flightid__r.Flight_Date_LT__c)))) &gt; 1, &quot;&quot;, &quot;0&quot;) &amp; 
TEXT(DAY(DATEVALUE(Flightid__r.Flight_Date_LT__c))) &amp; &quot;/&quot; &amp; 

TEXT(YEAR(DATEVALUE(Flightid__r.Flight_Date_LT__c))),&quot;Unidentified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Arrival_STN__c</fullName>
        <formula>Flightid__r.Arrival_STN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Arrival STN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_F__c</fullName>
        <description>Flight Number which relate to CTI</description>
        <formula>IF(NOT(ISBLANK(Flightid__r.Flight_Number__c)),
LEFT(Flightid__r.Flight_Number__c, LEN(Flightid__r.Flight_Number__c) - 4) &amp; TEXT(VALUE(RIGHT(Flightid__r.Flight_Number__c, 4))),&quot;TGXXX&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight__c</fullName>
        <description>Flight Carrier which flight reat to CTI&apos;s case</description>
        <formula>LEFT(Flight_Number_F__c , 2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flightid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is look up to Object Flight to relate CTI with Flight.</description>
        <label>Flight Number</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>CTIs</relationshipLabel>
        <relationshipName>CTIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_To__c</fullName>
        <description>This field is used to identify &apos;Outbound&apos;, &apos;Inbound&apos;, or &apos;Unidentified&apos; for CTI&apos;s Flight. This is map from sector.</description>
        <formula>IF(Sector__c != &quot;XXX&quot;,
IF( LEFT(Sector__c, 3) == &quot;BKK&quot;, &quot;Outbound&quot;,&quot;Inbound&quot;),
&quot;Unidentified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From - To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigated_Result__c</fullName>
        <label>Investigated Result</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Create_Date__c</fullName>
        <description>Case created date</description>
        <formula>DATEVALUE(Caseid__r.CreatedDate )</formula>
        <label>Issue Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Create_Date_v2__c</fullName>
        <description>Case created date in format DD-MMM-YY</description>
        <formula>IF(LEN(TEXT(DAY(DATEVALUE( Caseid__r.CreatedDate )))) &gt; 1,&quot;&quot;,&quot;0&quot;) &amp; TEXT(DAY(DATEVALUE(Caseid__r.CreatedDate))) &amp; &quot;-&quot; &amp; CASE(MONTH(DATEVALUE(Caseid__r.CreatedDate)), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; RIGHT(TEXT(YEAR(DATEVALUE(Caseid__r.CreatedDate))),2)</formula>
        <label>Issue Create Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Created_Date__c</fullName>
        <description>Case created date in format MMM-YY</description>
        <formula>CASE(MONTH(DATEVALUE(Caseid__r.CreatedDate)), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;) &amp; &quot;-&quot; &amp; RIGHT(TEXT(YEAR(DATEVALUE(Caseid__r.CreatedDate))),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issued_Month__c</fullName>
        <description>Case created month in format Mmm e.g. Jan</description>
        <formula>CASE(MONTH(DATEVALUE(Caseid__r.CreatedDate)), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issued Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item1__c</fullName>
        <description>Item 1 is sub of CTI&apos;s Type.</description>
        <formula>IF(FIND(&quot; &gt; &quot;, TEXT(Item__c)) &gt; 0,
SUBSTITUTE(TEXT(Item__c), RIGHT(TEXT(Item__c), LEN(TEXT(Item__c)) - FIND(&quot; &gt; &quot;, TEXT(Item__c))), &quot;&quot;),TEXT(Item__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item2__c</fullName>
        <description>Item 2 is sub of CTI&apos;s Item 1.</description>
        <formula>SUBSTITUTE(Text(Item__c) , LEFT(Text(Item__c), FIND(&quot;&gt;&quot;, Text(Item__c))), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>This field is for user input. Item value is concate between Item 1 and Item 2 which in format &apos;Item 1 &gt; Item 2&apos;.</description>
        <label>Item</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Absorption of hotel, meal, transportation (STPC)</fullName>
                </value>
                <value>
                    <fullName>Absorption of Passenger Service Charge (Airport tax)</fullName>
                </value>
                <value>
                    <fullName>Absorption of visa on arrival</fullName>
                </value>
                <value>
                    <fullName>Accent &gt; Excellent</fullName>
                </value>
                <value>
                    <fullName>Accent &gt; Poor</fullName>
                </value>
                <value>
                    <fullName>Accessibility &gt; Complicated, difficult to access, no/slow response</fullName>
                </value>
                <value>
                    <fullName>Accessibility &gt; Easy to access, convenience, quick response</fullName>
                </value>
                <value>
                    <fullName>Accident &gt; By in-flight equipments</fullName>
                </value>
                <value>
                    <fullName>Accident &gt; By turbulence</fullName>
                </value>
                <value>
                    <fullName>Accident &gt; Items falling from overhead bin</fullName>
                </value>
                <value>
                    <fullName>Accompany cannot enter to lounge</fullName>
                </value>
                <value>
                    <fullName>Accrue mile with Star Alliance/Partners</fullName>
                </value>
                <value>
                    <fullName>Accuracy of Information</fullName>
                </value>
                <value>
                    <fullName>Adequacy / Availability</fullName>
                </value>
                <value>
                    <fullName>Age limitation of applicant</fullName>
                </value>
                <value>
                    <fullName>Age of Aircraft</fullName>
                </value>
                <value>
                    <fullName>Aircraft changed</fullName>
                </value>
                <value>
                    <fullName>Ambience</fullName>
                </value>
                <value>
                    <fullName>Ambience/Interior Design/Decoration &gt; Nice, beautiful, comfortable</fullName>
                </value>
                <value>
                    <fullName>Ambience/Interior Design/Decoration &gt; Old, Out of date</fullName>
                </value>
                <value>
                    <fullName>Ambience &gt; Crowded</fullName>
                </value>
                <value>
                    <fullName>Ambience &gt; Nice/beautiful</fullName>
                </value>
                <value>
                    <fullName>Amenities in toilets &gt; Availability</fullName>
                </value>
                <value>
                    <fullName>Amenities in toilets &gt; Quality</fullName>
                </value>
                <value>
                    <fullName>Amenity Availability &gt; Insufficient, not provide</fullName>
                </value>
                <value>
                    <fullName>Amenity Availability &gt; Sufficient, nice to provide</fullName>
                </value>
                <value>
                    <fullName>Amenity Quality &gt; Brand name , nice, useful</fullName>
                </value>
                <value>
                    <fullName>Amenity Quality &gt; Poor, not up to standard</fullName>
                </value>
                <value>
                    <fullName>Amount of incremental mileage purchase</fullName>
                </value>
                <value>
                    <fullName>Amount of limited mileage to attain upper level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Passenger&apos;s lastname whose relate to CTI&apos;s case</description>
        <formula>Caseid__r.Passengerid__r.Last_Name__c</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality_Fullname__c</fullName>
        <description>Passenger&apos;s nationality in fullname format with Unidentify for blank value.</description>
        <formula>IF(NOT(ISBLANK(TEXT(Nationality_txt__c))),TEXT(Nationality_txt__c),&quot;Unidentified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality_Group__c</fullName>
        <description>Represent passenger&apos;s nationality as &apos;Thai&apos; or &apos;Non-Thai&apos;</description>
        <label>Nationality Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thai</fullName>
                    <color>#000099</color>
                </value>
                <value>
                    <fullName>Non-Thai</fullName>
                    <color>#FF6666</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nationality_txt__c</fullName>
        <description>Passenger&apos;s nationality in fullname format</description>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Algerian</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>American Samoan</fullName>
                </value>
                <value>
                    <fullName>Andorran</fullName>
                </value>
                <value>
                    <fullName>Angolan</fullName>
                </value>
                <value>
                    <fullName>Anguillan</fullName>
                </value>
                <value>
                    <fullName>Antiguans</fullName>
                </value>
                <value>
                    <fullName>Argentine</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Aruban</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahamian</fullName>
                </value>
                <value>
                    <fullName>Bahraini</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Barbadian</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Belizean</fullName>
                </value>
                <value>
                    <fullName>Beninese</fullName>
                </value>
                <value>
                    <fullName>Bermudian</fullName>
                </value>
                <value>
                    <fullName>Bhutanese</fullName>
                </value>
                <value>
                    <fullName>Bolivian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>British-Dependent Territories Citiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>3 digit of Flight Number</description>
        <formula>RIGHT( Flight_Number_F__c , 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Flown__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link this case with PAX Flown Summary object which match to issue created mont  to be used to caculate 1MPAX and 100KPAX in report.</description>
        <label>Passenger Flown</label>
        <referenceTo>PAX_Flown_Summary__c</referenceTo>
        <relationshipLabel>CTIs</relationshipLabel>
        <relationshipName>CTIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Return null value which used in DW report.</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Area__c</fullName>
        <description>Concate Flight name and flight&apos;s Sector which flight relate to CTI.</description>
        <formula>Flightid__r.Name &amp; &quot; &quot; &amp;  Sector__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Blank__c</fullName>
        <description>Return null value which used in DW report.</description>
        <label>Route</label>
        <length>1</length>
        <type>Text</type>
    </fields>
</CustomObject>